# todoist-telegram-bot

./: .gitignore  README.md  main.py  pyproject.toml  settings.py
tests/: test_todoist_telegram_bot.py
todoist_telegram_bot/: todoist.py
